Fix self align of titles in modals

--- a/src/assets/scss/modals.scss
+++ b/src/assets/scss/modals.scss
@@ -14,9 +14,9 @@
     border-bottom: 1px solid #ddd;
     background-color: #eee;
     padding: 0.8rem 0.8rem 0.8rem 1.4rem !important;
-
-    h1 {
-      color: #222;
+    
+    h2 {
+      align-self: center;
     }
   }
 
